    PREEMPT_RT (Closes #719547)

  [ Ben Hutchings ]
  * certs: Remove certificates for test key used in Debian signing service and
    for my personal signing key
  * certs: Add certificate for production key used in Debian signing service
  * Update policy version to 4.2.0:
    - linux-kbuild: Change "#!/usr/bin/env perl" to "#!/usr/bin/perl"
    - Build with KBUILD_VERBOSE=1 by default

 -- Uwe Kleine-König <ukleinek@debian.org>  Sat, 21 Jul 2018 16:52:01 +0200

linux (4.18~rc5-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ John Paul Adrian Glaubitz ]
  * [m68k] net: Enable CONFIG_XSURF100 as module.
  * [m68k] udeb: Remove individual modules from nic-modules.
  * [m68k] scsi: Enable CONFIG_SCSI_ZORRO_ESP as module.
  * [m68k] udeb: Add zorro_esp module to scsi-modules.

  [ Ben Hutchings ]
  * [powerpcspe] powerpc/Makefile: Assemble with -me500 when building for E500
    (fixes FTBFS) (thanks to James Clarke)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 19 Jul 2018 16:16:23 +0100

linux (4.18~rc4-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * Remove remaining Python 2 (build-)dependencies:
    - Build docs using Python 3 version of Sphinx
    - linux-perf: Build docs using asciidoctor
    - linux-perf: Use Python 3 for scripts
  * autofs: rename 'autofs' module back to 'autofs4' (Closes: #902946)
  * udeb: Move of_mdio to nic-shared-modules (Closes: #903587)
  * [armhf] mm: Export __sync_icache_dcache() for xen-privcmd (fixes FTBFS)

 -- Ben Hutchings <ben@decadent.org.uk>  Thu, 12 Jul 2018 05:12:50 +0100

linux (4.18~rc3-1~exp1) experimental; urgency=medium

  * New upstream release candidate

  [ Ben Hutchings ]
  * aufs: Update to aufs4.x-rcN 20180702
  * netfilter: ipvs: Fix invalid bytes in IP_VS_MH_TAB_INDEX help text
  * Update config for 4.18 using kconfigeditor2
    - [x86,arm64] PCI: HOTPLUG_PCI_SHPC is now built-in