@@ -16,6 +16,7 @@ linux (4.18~rc7-1~exp1) UNRELEASED; urgency=medium
   * Update policy version to 4.2.0:
     - linux-kbuild: Change "#!/usr/bin/env perl" to "#!/usr/bin/perl"
     - Build with KBUILD_VERBOSE=1 by default
+    - objtool, usbip: Build with V=1 by default
 
  -- Uwe Kleine-König <ukleinek@debian.org>  Sat, 21 Jul 2018 16:52:01 +0200
 
